# webchat_5

./: .gitignore  .npmrc  README-webchat.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
docs/: ARCHITECTURE.md
services/agno-core/: pyproject.toml
services/agno-core/agno_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/agno-core/agnocore/: app.py
webchat-voice/: livekit.toml
